ini yg donatemanagement

--- a/donate_management.html
+++ b/donate_management.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- Tell the browser to be responsive to screen width -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Donate Management</title>
 
     <!-- Font Awesome -->
@@ -90,8 +92,6 @@
                                                 <td>10</td>
                                                 <td class="text-center" ><span class="badge bg-primary">Waiting</span></td>
                                             </tr>
-                                        </thead>
-                                        <tbody>
                                             <tr>
                                                 <td class="text-center">2</td>
                                                 <td class="text-center py-0 align-middle">
@@ -107,8 +107,6 @@
                                                 <td>4</td>
                                                 <td class="text-center" ><span class="badge bg-success">Accept</span></td>
                                             </tr>
-                                        </thead>
-                                        </tbody>
                                         <tr>
                                             <td class="text-center">3</td>
                                             <td class="text-center py-0 align-middle">
