--- a/auth/index.html
+++ b/auth/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdn.materialdesignicons.com/4.8.95/css/materialdesignicons.min.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/css/login.css" />
-  <link rel="icon" href="../assets/favicons.ico">
+  <link rel="icon" href="../assets/media/icon/favicons.ico">
 </head>
 
 <body>
