--- a/detail.html
+++ b/detail.html
@@ -24,6 +24,7 @@
   <link rel="stylesheet"
     href="./assets/vendors/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/extra_css.css" />
   <link rel="icon" href="./assets/media/icon/favicons.ico">
 
 </head>
