--- a/donation.html
+++ b/donation.html
@@ -25,6 +25,7 @@
   <link rel="stylesheet" type="text/css" href="./assets/vendors/plugins/slick/slick.css">
   <link rel="stylesheet" type="text/css" href="./assets/vendors/plugins/slick/slick-theme.css">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="./assets/css/extra_css.css" />
   <link rel="icon" href="./assets/media/icon/favicons.ico">
 
 </head>
