--- a/history.html
+++ b/history.html
@@ -19,8 +19,8 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-  <link rel="stylesheet" href="./assets/css/style.css">
-
+  <!-- responsive Nav Bar -->
+  <link rel="stylesheet" type="text/css" href="./assets/css/extra_css.css" />
   <link rel="stylesheet" type="text/css" href="./assets/css/history.css">
   <link rel="stylesheet" type="text/css" href="./assets/css/sidebar.css">
   <link rel="icon" href="./assets/media/icon/favicons.ico">
@@ -31,150 +31,13 @@
   <!-- Site wrapper -->
   <div class="wrapper">
 
-    <!-- Navbar -->
-    <nav class="main-header navbar navbar-expand navbar-light navbar-white d-flex flex-row">
-      <!-- Left navbar links -->
-      <ul class="navbar-nav">
-        <li class="nav-item dropdown">
-          <a id="dropdownSubMenu1" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-            class="nav-link dropdown-toggle">All Categories</a>
-          <ul aria-labelledby="dropdownSubMenu1" class="dropdown-menu border-0 shadow"
-            style="left: 0px; right: inherit;">
-            <li><a href="#" class="dropdown-item">Novel</a></li>
-            <li><a href="#" class="dropdown-item">Comic Book</a></li>
-            <li><a href="#" class="dropdown-item">Detective and Mystery</a></li>
-            <li><a href="#" class="dropdown-item">Historical Fiction</a></li>
-            <li><a href="#" class="dropdown-item">Horror</a></li>
-            <li><a href="#" class="dropdown-item">literary Fiction</a></li>
-            <!-- End Level two -->
-          </ul>
-        </li>
-        <li class="nav-item dropdown">
-          <a id="dropdownSubMenu1" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-            class="nav-link dropdown-toggle">All Time</a>
-          <ul aria-labelledby="dropdownSubMenu1" class="dropdown-menu border-0 shadow"
-            style="left: 0px; right: inherit;">
-            <li><a href="#" class="dropdown-item">2020</a></li>
-            <li><a href="#" class="dropdown-item">2019</a></li>
-            <li><a href="#" class="dropdown-item">2018</a></li>
-            <li><a href="#" class="dropdown-item">2017</a></li>
-            <li><a href="#" class="dropdown-item">2016</a></li>
-            <li><a href="#" class="dropdown-item">2015</a></li>
-            <!-- End Level two -->
-          </ul>
-        </li>
-      </ul>
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
-        </li>
-      </ul>
-    </nav>
-    <!-- /.navbar -->
+    <div w3-include-html="include_navbar.html"></div>
     <div w3-include-html="include_sidebar.html"></div>
     <!-- Content Wrapper. Contains page content -->
 
     <div class="content-wrapper">
 
       <!-- Content Header (Page header) -->
-      <!-- /.modal -->
-      <div class="modal fade" id="ModalBook" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabesl" aria-hidden="true">
-        <div class="modal-dialog modal-xl" role="document">
-          <div class="modal-content" id="edit-module">
-            <div class="modal-header">
-              <h5 class="modal-title" id="modal-title">Edit Data</h5>
-              <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">×</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <div class="row">
-                <div class="col-lg-2">
-                  <label class="title-module">Url Image</label>
-                </div>
-                <div class="col-lg-10">
-                  <input type="text" name="url" class="form-control" placeholder="/assets/background.png">
-                </div>
-              </div>
-              <hr class="divider">
-              <div class="row">
-                <div class="col-lg-2">
-                  <label class="title-module">Book Tittle</label>
-                </div>
-                <div class="col-lg-4">
-                  <input type="text" name="title" class="form-control" placeholder="Dilan 1991">
-                </div>
-              </div>
-              <hr class="divider">
-              <div class="row">
-                <div class="col-lg-2">
-                <label class="title-module">Date:</label>
-                </div>
-                <div class="col-lg-4">
-                    <div class="input-group date" id="datetimepicker4" data-target-input="nearest">
-                      <input type="text" name="date" class="form-control datetimepicker-input" data-target="#datetimepicker4"/>
-                      <div class="input-group-append" data-target="#datetimepicker4" data-toggle="datetimepicker">
-                          <div class="input-group-text"><i class="fa fa-calendar"></i></div>
-                      </div>
-                  </div>
-                </div>
-              </div>
-              <hr class="divider">
-              <div class="row">
-                <div class="col-lg-2">
-                  <label class="title-module">Category</label>
-                </div>
-                <div class="col-lg-4">
-                  <div class="form-group">
-                    <select class="form-control" name="category" >
-                      <option value="" >Choose Category</option>
-                      <option value="Novel" >Novel</option>
-                      <option value="Comic Book" >Comic Book</option>
-                      <option value="Detective and Mystery" >Detective and Mystery</option>
-                      <option value="Historical Fiction" >Historical Fiction</option>
-                      <option value="Horror" >Horror</option>
-                      <option value="literary Fiction" >literary Fiction</option>
-                    </select>
-                  </div>
-                </div>
-              </div>
-              <hr class="divider">
-              <div class="row">
-                <div class="col-lg-2">
-                    <label class="title-module">Description</label>
-                </div>
-                <hr class="divider">
-                <div class="col-lg-10">
-                  <textarea name="description" class="ckeditor" cols="50" rows="5" placeholder="Type Here"></textarea>
-                </div>
-              </div>
-            </div>
-            <div class="modal-footer">
-              <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
-              <button id="confirmBook" class="btn btn-warning" onclick="confirmBook()" >Save</button>
-            </div>
-          </div>
-        </div>
-    </div>
-    <div class="modal fade" id="BerhasilModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabesl"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Save Complete!</h5>
-              <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">×</span>
-              </button>
-            </div>
-            <div class="modal-body"><img class="check" src="./assets/media/check.png"></div>
-            <p>Data already saved</p>
-            <div class="modal-footer">
-              <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- /.modal -->
       <section class="content-header">
         <!-- /.container-fluid -->
       </section>
