--- a/include_sidebar.html
+++ b/include_sidebar.html
@@ -22,12 +22,14 @@
           <!-- Sidebar user panel (optional) -->
           <div class="user-panel mt-3 pb-3 mb-3 d-flex">
             <div class="image my-center">
+              <a href="profile.html">
               <img src="./assets/media/user/profile.png" class="img-circle elevation-2 profile-img-custom"
                 alt="User Image">
+              </a>
             </div>
             <div class="info">
               <a href="profile.html" class="d-block user-name">Niki Zefanya</a>
-              <p style="font-size: 1.3rem; font-weight: normal; margin-bottom: 0px; color: #000;">Rp. 50000</p>
+              <p style="font-size: 1.3rem; font-weight: normal; margin-bottom: 0px; color: #000;">Rp. 50.000,-</p>
               <a href="./top_up.html" class="btn btn-sm btn-primary" style="color: white;">
                 <i class="fas fa-plus-square"></i> &nbsp; Top Up
               </a>
@@ -40,7 +42,7 @@
               <!-- Add icons to the links using the .nav-icon class
              with font-awesome or any other icon font library -->
              <li class="nav-item">
-              <a href="./Profile.html" class="nav-link">
+              <a href="./profile.html" class="nav-link">
                 <i class="nav-icon fas fa-user"></i>
                 <p>
                   Profile
@@ -48,7 +50,7 @@
               </a>
             </li>
               <li class="nav-item">
-                <a href="./index.html" class="nav-link active" id="index">
+                <a href="./index.html" class="nav-link" id="index">
                   <i class="nav-icon fas fa-book"></i>
                   <p>
                     Explore
