--- a/payment.html
+++ b/payment.html
@@ -29,7 +29,7 @@
   <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.min.css'>
 
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
-  <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="./assets/css/extra_css.css" />
 
   <link rel="stylesheet" type="text/css" href="./assets/css/history.css" />
   <link rel="stylesheet" type="text/css" href="./assets/css/sidebar.css" />
@@ -178,6 +178,7 @@
             <div class="col-sm-6">
               <ol class="breadcrumb float-sm-right">
                 <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                <li class="breadcrumb-item"><a href="fine_management.html">Fine Management</a></li>
                 <li class="breadcrumb-item active">Fine Payment</li>
               </ol>
             </div>
