--- a/return_book.html
+++ b/return_book.html
@@ -18,6 +18,7 @@
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/extra_css.css">
     <link rel="icon" href="./assets/media/icon/favicons.ico">
     <link rel="stylesheet" type="text/css" href="./assets/css/returnbook.css">
 
