--- a/book_management.html
+++ b/book_management.html
@@ -53,26 +53,14 @@
 
     <link rel="icon" href="./assets/media/icon/favicons.ico" />
     <link rel="stylesheet" href="./assets/css/usermanagement.css" />
+    <link rel="stylesheet" href="./assets/css/extra_css.css" />
   </head>
 
   <body class="hold-transition sidebar-mini layout-fixed">
     <!-- Site wrapper -->
     <div class="wrapper">
       <!-- Navbar -->
-      <nav
-        class="main-header navbar navbar-expand navbar-light navbar-white d-flex flex-row"
-      >
-        <div class="toggle-navbar-nav">
-          <ul class="navbar-nav toggle-navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" data-widget="pushmenu" href="#" role="button"
-                ><i class="fas fa-bars"></i
-              ></a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-      <!-- /.navbar -->
+      <div w3-include-html="include_navbar.html"></div>
       <div w3-include-html="include_sidebar.html"></div>
       <!-- Content Wrapper. Contains page content -->
       <div class="content-wrapper">
@@ -452,7 +440,7 @@
               </div>
               <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
-                  <li class="breadcrumb-item"><a href="#">Home</a></li>
+                  <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                   <li class="breadcrumb-item active">Books</li>
                 </ol>
               </div>
@@ -525,7 +513,6 @@
     ></script>
     <!-- extra JS to include HTML -->
     <script src="./assets/js/js.js" type="text/javascript"></script>
-    <script type="text/javascript" src="./assets/js/search.js"></script>
     <!-- Ckeditor -->
     <script src="//cdn.ckeditor.com/4.15.1/standard/ckeditor.js"></script>
     <!-- InputMask -->
