--- a/category_management.html
+++ b/category_management.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/history.css" />
     <link rel="stylesheet" type="text/css" href="./assets/css/sidebar.css" />
     <link rel="stylesheet" type="text/css" href="./assets/css/customtable.css" />
+    <link rel="stylesheet" href="./assets/css/extra_css.css" />
     <link rel="icon" href="./assets/media/icon/favicons.ico" />
 
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.min.css'>
@@ -37,18 +38,7 @@
 <body class="hold-transition sidebar-mini layout-fixed">
     <!-- Site wrapper -->
     <div class="wrapper">
-        <!-- Navbar -->
-        <nav class="main-header navbar navbar-expand navbar-light navbar-white d-flex flex-row">
-            <div class="toggle-navbar-nav">
-                <ul class="navbar-nav toggle-navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i
-                                class="fas fa-bars"></i></a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-        <!-- /.navbar -->
+        <div w3-include-html="include_navbar.html"></div>
         <div w3-include-html="include_sidebar.html"></div>
         <!-- Content Wrapper. Contains page content -->
 
