--- a/change_password.html
+++ b/change_password.html
@@ -19,6 +19,7 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
   <!-- CSS -->
   <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/extra_css.css" />
   <link rel="stylesheet" type="text/css" href="./assets/css/sidebar.css">
   <link rel="icon" href="./assets/media/icon/favicons.ico">
 
