--- a/donate_management.html
+++ b/donate_management.html
@@ -22,6 +22,7 @@
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/extra_css.css" />
     <link rel="icon" href="./assets/media/icon/favicons.ico">
 
 </head>
@@ -43,7 +44,7 @@
                         </div>
                         <div class="col-sm-6">
                             <ol class="breadcrumb float-sm-right">
-                                <li class="breadcrumb-item"><a href="#">Home</a></li>
+                                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                                 <li class="breadcrumb-item active">Donate Management</li>
                             </ol>
                         </div>
@@ -198,7 +199,6 @@
     <script src="./assets/js/js.js" type="text/javascript"></script>
     <!-- Flickity -->
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
-    <script type="text/javascript" src="./assets/js/search.js" ></script>
     <!-- Ckeditor -->
     <script src="//cdn.ckeditor.com/4.15.1/standard/ckeditor.js"></script>
     <!-- InputMask -->
