--- a/include_navbar.html
+++ b/include_navbar.html
@@ -1,40 +1,52 @@
-<!-- Navbar -->
-<nav class="main-header navbar navbar-expand navbar-light navbar-white d-flex flex-row">
-    <!-- Left navbar links -->
-    <ul class="navbar-nav">
-        <li class="nav-item dropdown">
-            <a id="dropdownSubMenu1" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-                class="nav-link dropdown-toggle">All Categories</a>
-            <ul aria-labelledby="dropdownSubMenu1" class="dropdown-menu border-0 shadow"
-                style="left: 0px; right: inherit;">
-                <li><a href="#" class="dropdown-item">Novel</a></li>
-                <li><a href="#" class="dropdown-item">Comic Book</a></li>
-                <li><a href="#" class="dropdown-item">Detective and Mystery</a></li>
-                <li><a href="#" class="dropdown-item">Historical Fiction</a></li>
-                <li><a href="#" class="dropdown-item">Horror</a></li>
-                <li><a href="#" class="dropdown-item">literary Fiction</a></li>
-                <!-- End Level two -->
+
+        <nav class="main-header navbar navbar-expand navbar-light navbar-white d-flex flex-row">
+            <!-- Left navbar links -->
+            <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                    <a id="dropdownSubMenu1" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                        class="nav-link dropdown-toggle">All Categories</a>
+                    <ul aria-labelledby="dropdownSubMenu1" class="dropdown-menu border-0 shadow"
+                        style="left: 0px; right: inherit">
+                        <li><a href="./category.html" class="dropdown-item">Novel</a></li>
+                        <li><a href="./category.html" class="dropdown-item">Comic Book</a></li>
+                        <li>
+                            <a href="./category.html" class="dropdown-item">Detective and Mystery</a>
+                        </li>
+                        <li><a href="./category.html" class="dropdown-item">Historical Fiction</a></li>
+                        <li><a href="./category.html" class="dropdown-item">Horror</a></li>
+                        <li><a href="./category.html" class="dropdown-item">literary Fiction</a></li>
+                        <!-- End Level two -->
+                    </ul>
+                </li>
+
+                <li class="nav-item dropdown">
+                    <a id="dropdownSubMenu1" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                        class="nav-link dropdown-toggle">All Time</a>
+                    <ul aria-labelledby="dropdownSubMenu1" class="dropdown-menu border-0 shadow"
+                        style="left: 0px; right: inherit">
+                        <li><a href="./year.html" class="dropdown-item">2020</a></li>
+                        <li><a href="./year.html" class="dropdown-item">2019</a></li>
+                        <li><a href="./year.html" class="dropdown-item">2018</a></li>
+                        <li><a href="./year.html" class="dropdown-item">2017</a></li>
+                        <li><a href="./year.html" class="dropdown-item">2016</a></li>
+                        <li><a href="./year.html" class="dropdown-item">2015</a></li>
+                        <!-- End Level two -->
+                    </ul>
+                </li>
             </ul>
-        </li>
-        <li class="nav-item dropdown">
-            <a id="dropdownSubMenu1" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-                class="nav-link dropdown-toggle">All Time</a>
-            <ul aria-labelledby="dropdownSubMenu1" class="dropdown-menu border-0 shadow"
-                style="left: 0px; right: inherit;">
-                <li><a href="#" class="dropdown-item">2020</a></li>
-                <li><a href="#" class="dropdown-item">2019</a></li>
-                <li><a href="#" class="dropdown-item">2018</a></li>
-                <li><a href="#" class="dropdown-item">2017</a></li>
-                <li><a href="#" class="dropdown-item">2016</a></li>
-                <li><a href="#" class="dropdown-item">2015</a></li>
-                <!-- End Level two -->
-            </ul>
-        </li>
-    </ul>
-    <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-            <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
-        </li>
-    </ul>
-</nav>
-<!-- /.navbar -->
+            <!-- SEARCH FORM -->
+            <form id="search-books" class="form-inline flex-grow-1"  action="./searchpage.html">
+                <div id="searchbar" class="form-group has-search">
+                    <span class="fa fa-search form-control-feedback"></span>
+                    <input id="input-search" type="text" class="form-control" placeholder="Search Book" />
+                </div>
+            </form>
+            <div class="toggle-navbar-nav">
+                <ul class="navbar-nav toggle-navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i
+                                class="fas fa-bars"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
