--- a/profileAdmin.html
+++ b/profileAdmin.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/extra_css.css">
 
     <link rel="stylesheet" type="text/css" href="./assets/css/sidebar.css">
     <link rel="icon" href="./assets/media/icon/favicons.ico">
