--- a/rent_management.html
+++ b/rent_management.html
@@ -21,6 +21,7 @@
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/extra_css.css">
     <link rel="icon" href="./assets/media/icon/favicons.ico">
 </head>
 
@@ -28,16 +29,7 @@
     <!-- Site wrapper -->
     <div class="wrapper">
         <!-- Navbar -->
-        <nav class="main-header navbar navbar-expand navbar-light navbar-white d-flex flex-row">
-            <div class="toggle-navbar-nav">
-                <ul class="navbar-nav toggle-navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i
-                                class="fas fa-bars"></i></a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        <div w3-include-html="include_navbar.html"></div>
         <div w3-include-html="include_sidebar.html"></div>
 
         <!-- Content Wrapper. Contains page content -->
@@ -266,7 +258,6 @@
     <script src="./assets/js/js.js" type="text/javascript"></script>
     <!-- Flickity -->
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
-    <script type="text/javascript" src="./assets/js/search.js"></script>
     <!-- InputMask -->
     <script src="./assets/vendors/plugins/moment/moment.min.js"></script>
     <script src="./assets/vendors/plugins/inputmask/min/jquery.inputmask.bundle.min.js"></script>
