--- a/slideshow_management.html
+++ b/slideshow_management.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="assets/vendors//plugins/datatables-responsive/css/responsive.bootstrap4.min.css" />
 
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
-  <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="./assets/css/extra_css.css" />
 
   <link rel="stylesheet" type="text/css" href="./assets/css/history.css" />
   <link rel="stylesheet" type="text/css" href="./assets/css/sidebar.css" />
@@ -35,16 +35,7 @@
   <!-- Site wrapper -->
   <div class="wrapper">
     <!-- Navbar -->
-    <nav class="main-header navbar navbar-expand navbar-light navbar-white d-flex flex-row">
-      <div class="toggle-navbar-nav">
-        <ul class="navbar-nav toggle-navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <!-- /.navbar -->
+    <div w3-include-html="include_navbar.html"></div>
     <div w3-include-html="include_sidebar.html"></div>
     <!-- Content Wrapper. Contains page content -->
 
