--- a/top_up.html
+++ b/top_up.html
@@ -24,17 +24,14 @@
     <link rel="stylesheet"
         href="./assets/vendors/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
 
-    <link rel="stylesheet" type="text/css" href="./assets/vendors/plugins/slick/slick.css">
-    <link rel="stylesheet" type="text/css" href="./assets/vendors/plugins/slick/slick-theme.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/extra_css.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/topup.css">
     <link rel="icon" href="./assets/media/icon/favicons.ico">
     <link href='https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css'>
     <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.css'>
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/icheck-bootstrap/3.0.1/icheck-bootstrap.min.css">
-
-
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed">
