--- a/user_management.html
+++ b/user_management.html
@@ -19,6 +19,7 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet" />
 
   <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="./assets/css/extra_css.css" />
   <!-- DataTables -->
   <link rel="stylesheet" href="./assets/vendors/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css" />
   <link rel="stylesheet" href="./assets/vendors/plugins/datatables-responsive/css/responsive.bootstrap4.min.css" />
@@ -37,16 +38,7 @@
   <!-- Site wrapper -->
   <div class="wrapper">
     <!-- Navbar -->
-    <nav class="main-header navbar navbar-expand navbar-light navbar-white d-flex flex-row">
-      <div class="toggle-navbar-nav">
-        <ul class="navbar-nav toggle-navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <!-- /.navbar -->
+    <div w3-include-html="include_navbar.html"></div>
     <div w3-include-html="include_sidebar.html"></div>
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
@@ -177,7 +169,7 @@
             </div>
             <div class="col-sm-6">
               <ol class="breadcrumb float-sm-right">
-                <li class="breadcrumb-item"><a href="#">Home</a></li>
+                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                 <li class="breadcrumb-item active">Users</li>
               </ol>
             </div>
