--- a/Profile.html
+++ b/Profile.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/sidebar.css">
     <link rel="icon" href="./assets/media/icon/favicons.ico">
     <!-- Sweet Alert -->
-    <link rel="stylesheet" href="sweetalert2.min.css">
+    <!-- <link rel="stylesheet" href="sweetalert2.min.css"> -->
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
@@ -194,10 +194,10 @@
     <script type="text/javascript" src="./assets/vendors/dist/js/adminlte.min.js"></script>
     <!-- Sweeet Alert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-    <script src="sweetalert2.min.js"></script>
-    <script src="sweetalert2.all.min.js"></script>
+    <!-- <script src="sweetalert2.min.js"></script> -->
+    <!-- <script src="sweetalert2.all.min.js"></script> -->
     <!-- Optional: include a polyfill for ES6 Promises for IE11 -->
-    <script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script> -->
     <!-- / Sweet Alert -->
     <!-- extra JS to include HTML -->
     <script src="./assets/js/js.js" type="text/javascript"></script>
