fixed DOM duplicate id and sidebar redirect profile

--- a/category_management.html
+++ b/category_management.html
@@ -554,12 +554,12 @@
                         <div class="modal-body">
                             <div class="card-body">
                                 <div class="form-group">
-                                    <label for="inputCategoryId">Category ID</label>
-                                    <input type="text" class="form-control" name="categoryId" id="inputCategoryId" value="CTG0001">
+                                    <label for="editCategoryId">Category ID</label>
+                                    <input type="text" class="form-control" name="categoryId" id="editCategoryId" value="CTG0001">
                                 </div>
                                 <div class="form-group">
-                                    <label for="inputCategoryName">Category Name</label>
-                                    <input type="text" class="form-control" name="categoryName" id="inputCategoryName" value="Fantasy">
+                                    <label for="editCategoryName">Category Name</label>
+                                    <input type="text" class="form-control" name="categoryName" id="editCategoryName" value="Fantasy">
                                 </div>
                             </div>
                         </div>
