--- a/include_sidebar.html
+++ b/include_sidebar.html
@@ -22,13 +22,13 @@
           <!-- Sidebar user panel (optional) -->
           <div class="user-panel mt-3 pb-3 mb-3 d-flex">
             <div class="image my-center">
-              <a href="profile.html">
+              <a href="Profile.html">
               <img src="./assets/media/user/profile.png" class="img-circle elevation-2 profile-img-custom"
                 alt="User Image">
               </a>
             </div>
             <div class="info">
-              <a href="profile.html" class="d-block user-name">Niki Zefanya</a>
+              <a href="Profile.html" class="d-block user-name">Niki Zefanya</a>
               <p style="font-size: 1.3rem; font-weight: normal; margin-bottom: 0px; color: #000;">Rp. 50.000,-</p>
               <a href="./top_up.html" class="btn btn-sm btn-primary" style="color: white;">
                 <i class="fas fa-plus-square"></i> &nbsp; Top Up
