--- a/slideshow_management.html
+++ b/slideshow_management.html
@@ -309,10 +309,10 @@
                     placeholder="Enter Sub Title">
                 </div>
                 <div class="form-group">
-                  <label for="exampleInputFile">Choose Image</label>
+                  <label for="addSlideshowImg">Choose Image</label>
                   <div class="input-group">
                     <div class="custom-file">
-                      <input type="file" class="custom-file-input" id="exampleInputFile" name="slideshowImage">
+                      <input type="file" class="custom-file-input" id="addSlideshowImg" name="slideshowImage">
                       <label class="custom-file-label" for="exampleInputFile">Choose file</label>
                     </div>
                   </div>
@@ -347,8 +347,8 @@
             <div class="modal-body">
               <div class="card-body">
                 <div class="form-group">
-                  <label for="inputTitle">Title</label>
-                  <input type="text" class="form-control" name="slideshowTitle" id="inputTitle"
+                  <label for="editTitle">Title</label>
+                  <input type="text" class="form-control" name="slideshowTitle" id="editTitle"
                     value="Ubur-ubur Lembur">
                 </div>
                 <div class="form-group">
